--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "vite-project",
-  "private": true,
+  "name": "chat-react",
   "version": "0.0.0",
+  "main": "server.js",
+  "homepage": "https://github.com/KaterynaSlatina/chat-react",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d public"
   },
   "dependencies": {
     "emoji-picker-react": "^4.11.1",
