--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-react",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "main": "server.js",
   "homepage": "https://github.com/KaterynaSlatina/chat-react",
   "type": "module",
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4"
+    "gh-pages": "^6.1.1",
+    "vite": "^5.4.1"
   }
 }
